force-app/main/default/objects/AcctUnlocked__e/AcctUnlocked__e.object-meta.xml
<CustomObject>
    <description>This event will be generated when either a cloudcheck pass for an account or an account unlocked by customer service representative</description>
    <label>Account Event</label>
    <pluralLabel>Account Events</pluralLabel>
</CustomObject>