force-app/main/default/objects/AcctUnlocked__e/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <label>Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>