force-app/main/default/objects/AcctUnlocked__e/fields/NoID_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>NoID_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NoID Email Sent</label>
    <type>Checkbox</type>
</CustomField>