force-app/main/default/objects/AcctUnlocked__e/fields/Passed_AML__c.field-meta.xml
<CustomField>
    <fullName>Passed_AML__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passed AML</label>
    <type>Checkbox</type>
</CustomField>