force-app/main/default/objects/AcctUnlocked__e/fields/PDS_Received__c.field-meta.xml
<CustomField>
    <fullName>PDS_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PDS Received</label>
    <type>Checkbox</type>
</CustomField>