force-app/main/default/objects/AcctUnlocked__e/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <description>ID od the transaction that has been passed AML decision.</description>
    <label>Transaction Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>